2008-05-31  Arno Rehn  <arno@arnorehn.de>

	* Updated AssemblyInfo.cs
	* Regenerated the QScintilla sources from the 2.2 release.

2008-05-17  Arno Rehn  <arno@arnorehn.de>

	* Don't build kimono because the classes won't compile.
	* Fixed resolve_classname.
	* Changed 'modules' to 'qyoto_modules' in QScintillaSharp, too.
	* Added delegate support. This is now possible:
		Connect(slider, SIGNAL("valueChanged(int)"), delegate(int i) {
			Console.WriteLine("value: {0}", i);
		});
	  For the above to work you need either Mono 1.9+ or specify -langversion:linq.
	  Alternatively, you can give the parameter types as generic arguments, like
	  Connect<int>(...)

2008-05-16  Richard Dale  <richard.j.dale@gmail.com>

	* After the modular smoke changes, the QtWebKit classes were not being
	  built
	* Rename the 'modules' global variable qyoto_modules to reduce the chances
	  of a name clash

2008-05-13  Arno Rehn  <arno@arnorehn.de>

	* Fix memory leak in WriteProperty.
	* Added missing license information.

2008-05-06  Richard Dale  <richard.j.dale@gmail.com>

	* Regenerate the C# sources from the Qt 4.4 release headers

2008-04-10  Richard Dale  <richard.j.dale@gmail.com>

	* Added the missing QWebHitTestResult.cs source. Thanks to annma for 
	  noticing

2008-04-20  Arno Rehn  <arno@arnorehn.de>

	* Since Mono 1.9 inherited private members are not included in the search
	  by Type.Get*. So now search in the whole hierarchy for the private field
	  'smokeObject'.


	* Regenerated the Qyoto sources from the Qt 4.4 rc1 headers

2008-03-03  Richard Dale  <richard.j.dale@gmail.com>

	* Added some more Qt 4.4 classes
	* Added some marshallers for new Qt 4.4 QList types
	* Brought the MonoDevelopment Qyoto project up to date with the current
	  sources

2008-02-25  Richard Dale  <richard.j.dale@gmail.com>

	* Regenerated the sources with the Qt 4.4 headers
	* Added the QtWebKit classes

2007-11-29  Richard Dale  <rdale@foton.es>
